# Benchmarks

./: .gitignore  Benchmarks.sln
cpp/: CMakeLists.txt
cpp/src/: main.cpp
csharp/: Bench.csproj  Program.cs
datasets/meta/: datasets.csv
go/: go.mod
go/cmd/bench/: main.go
java/src/main/java/bench/: Main.java
js/: bench_sort.mjs
python/bench/: main.py
results/: main_table_random_n1e6.csv  raw.csv  summary.csv  summary_by_distribution.xlsx
rust/: Cargo.toml
rust/src/: main.rs
scripts/: env_info.sh  make_excel_by_distribution.py  make_main_table.py  plot_summary.py  run_all.py  run_all.sh  run_java_all.sh  run_python_all.sh  summarize.py
ts/: bench_sort.ts  package.json  tsconfig.json
